--- a/plugin.xml
+++ b/plugin.xml
@@ -24,11 +24,11 @@
     xmlns:rim="http://www.blackberry.com/ns/widgets"
     xmlns:android="http://schemas.android.com/apk/res/android"
     id="cordova-plugin-jitsi-meet-sdk"
-    version="4.0.1">
+    version="4.0.2">
     <name>Jitsi Meet</name>
     <description>Cordova plugin with Jitsi Meet SDK features</description>
     <license>Apache 2.0</license>
-    <keywords>cordova,jitsi,sdk</keywords>
+    <keywords>cordova,jitsi,sdk,android,ios</keywords>
     <repo>https://github.com/Zeno97/cordova-plugin-jitsi-meet-sdk.git</repo>
 
     <js-module src="www/jitsi-meet.js" name="JitsiMeet">
