--- a/plugin.xml
+++ b/plugin.xml
@@ -77,6 +77,7 @@
         <podspec>
             <pods use-frameworks="true" >
                 <pod name="JitsiMeetSDK" />
+                <pod name="JitsiMeetSDK" spec="3.10.4" />
             </pods>
         </podspec>
 
